Rephrase r1733088 since leaking means horrible things in cryptography. This is not a security fix :p
git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1733089 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
-  *) mod_ssl: Fix possibly leaking custom [EC]DH params on restart.
+  *) mod_ssl: Fix a possible memory leak on restart for custom [EC]DH params.
      [Jan Kaluza, Yann Ylavic]
 
   *) prefork: Initialize the POD when running in ONE_PROCESS (or -X) mode to
